# living-dna

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PHASE-4.md  README.md  SECURITY.md  pyproject.toml
.claude/skills/: README.md
.claude/skills/ai/: agent-orchestrator.md  context-engine-architect.md  knowledge-graph-architect.md  llm-orchestration.md
.claude/skills/analysis/: architecture-analyzer.md  dependency-parser.md  repository-parser.md  (+1 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: README.md  develop.json  main.json
.github/workflows/: ci.yml
dna/: __init__.py  ai.py  cli.py  continuous.py  db.py  genome_ops.py  github_connector.py  identity.py  ingest.py  insights.py  pr_intel.py  server.py  timeline.py
docs/: README.md
docs/architecture/: README.md
docs/concepts/: README.md
docs/getting-started/: README.md
docs/how-to/: README.md  troubleshooting.md
docs/reference/: README.md  api.md  cli.md  performance.md
fixtures/: make_fixture.py
scripts/: demo.sh
tests/: test_phase4.py  test_skeleton.py
web/: index.html
webapp/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/components/: genome-graph.tsx  insights.tsx  shell.tsx  ui.tsx
webapp/lib/: api.ts  format.ts  store.ts  types.ts
webapp/tests/: api.test.ts  format.test.ts  store.test.ts
(+26 files in other folders)
